# NFT-P1

./: README.md  package-lock.json  package.json
frontEnd/: package-lock.json  package.json
frontEnd/nft-artwork-tracker/: package-lock.json  package.json  tsconfig.json
frontEnd/nft-artwork-tracker/src/: App.css  App.tsx
frontEnd/nft-artwork-tracker/src/components/: ArtworkCard.tsx
frontEnd/nft-artwork-tracker/src/contract/: ArtworkNFT.json
nft-art-platform/: package-lock.json  package.json
nft-art-platform/nft-art-platform/: package-lock.json  package.json
nft-art-platform/nft-art-platform/contracts/: Lock.sol
nft_minter/: Anchor.toml  package.json
nft_minter/programs/nft_minter/: Cargo.toml
nft_minter/programs/nft_minter/src/: lib.rs
nft_minter/tests/: nft_minter.ts
